--- a/ECOMCupCake/ECOMCupCake/ECOMCupCake.csproj
+++ b/ECOMCupCake/ECOMCupCake/ECOMCupCake.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
+    <UserSecretsId>c30a8624-4fb3-432d-b6ed-3c1a3b587f7e</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
